# claude-code-toolkit

./: .gitignore  CLAUDE.md  LICENSE  README.md  marketplace.json
.claude-plugin/: marketplace.json
skills/django-best-practices/: SKILL.md
skills/django-best-practices/assets/: admin_template.py  data_migration_template.py  model_template.py  schema_migration_checklist.md  test_template.py
skills/django-best-practices/references/: admin-patterns.md  migration-patterns.md  model-patterns.md  multi-tenant-patterns.md
skills/django-best-practices/scripts/: generate_model.py  migration_helper.py
skills/django-security/: SKILL.md
skills/django-security/assets/: secure_settings_template.py  security_checklist.md  security_middleware_template.py  security_test_template.py
skills/django-security/references/: django-security-settings.md  multi-tenant-security.md  owasp-top10-django.md  secrets-management.md
skills/django-security/scripts/: security_auditor.py
skills/django-typing/: SKILL.md
skills/django-typing/assets/: .pre-commit-config.yaml  mypy.ini  pyproject.toml  typed_manager_template.py  typed_model_template.py  typed_serializer_template.py  typed_view_template.py
skills/django-typing/references/: advanced-typing-patterns.md  django-typing-guide.md  drf-typing-patterns.md  multi-tenant-typing.md  mypy-django-configuration.md  troubleshooting-mypy-django.md
skills/django-typing/scripts/: config_validator.py  type_hint_generator.py  typing_checker.py
